# Network_tcp_like_protocol

./: .project  README.txt
newudpl-1.4/: AUTHORS  ChangeLog  ChangeLog.html  Makefile  Makefile.am  Makefile.in  akiralib.c  akiralib.h  akiramath.c  akiramath.h  config.status  configure  configure.in  host2ip.c  host2ip.h  item.h  newudpl  newudpl.c  newudpl.h  newudpl.html  notify.c  queue.c  queue.h  sysdep.h  sysdep1.h
newudpl-1.5/: COPYRIGHT  ChangeLog  ChangeLog.html  INSTALL  Makefile  Makefile.am  Makefile.in  akiralib.c  akiralib.h  akiramath.h  config.status  configure  configure.in  detour_rat  getopt.c  gettimeofday.c  host2ip.c  multimer.c  newudpl.c  newudpl.html  notify.c  queue.h  sysdep.h  uname.c  uname.h  winsocklib.c  winsocklib.h
newudpl-1.5/bcb/: newudpl_bcb.bpf  newudpl_bcb.bpr
newudpl-1.5/msc/: newudpl.dsp  newudpl.dsw
receiver_test/: rcv_log.txt  receiver.java
sender_test/: send_log.txt  sender.java
