
AUTOMAKE_OPTIONS = foreign

bin_PROGRAMS = newudpl

newudpl_SOURCES = newudpl.c newudpl.h \
        akiralib.c akiralib.h \
        akiramath.c akiramath.h \
        queue.c queue.h item.h \
        host2ip.c host2ip.h \
        multimer.c multimer.h \
        notify.c notify.h \
        getopt.c getopt.h \
        uname.c uname.h \
        gettimeofday.c gettimeofday.h \
        winsocklib.c winsocklib.h \
        sysdep.h

EXTRA_DIST = ChangeLog.html newudpl.html COPYRIGHT \
        detour_rat \
        msc/*.ds? \
        bcb/*.bp? bcb/obj/*

